--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-8">
     <h3>Edit List</h3>
-    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation">
+    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
 
@@ -20,8 +20,12 @@
         </div>
 
         <div class="mb-3">
+            <img src="<%=listing.image.url%>" />
+        </div>
+
+        <div class="mb-3">
             <label for="image" class="form-label">Image</label>
-            <input name="listing[image]" value="<%=listing.image%>" type="text" class="form-control" required />
+            <input name="listing[image]" value="<%=listing.image%>" type="file" class="form-control" />
         </div>
     <div class="row">
         <div class="mb-3 col-md-4">
