--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -19,7 +19,7 @@
         
         <div class="mb-3">
             <label for="image" class="form-label">Upload Listing Image</label>
-            <input name="listing[image]" class="form-control" type="file" />
+            <input name="listing[image]" class="form-control" type="file" required/>
         </div>
 
         <div class="row">
