--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -91,8 +91,8 @@
         <div class="card-body">
             <p class="card-text">
                 <b><%=listing.title%></b> <br />
-                <span class="price">&#8377;       <%=listing.price.toLocaleString("en-IN")%>/night</span>
-                <i class="tax-info hidden"> &nbsp; &nbsp; &#8377; <%= listing.price + 0.18*(listing.price) %>/night</i>
+                <span class="price">&#8377;       <%=listing.price.toLocaleString("en-IN")%>/month</span>
+                <i class="tax-info hidden"> &nbsp; &nbsp; &#8377; <%= listing.price + 0.18*(listing.price) %>/month</i>
             </p>
         </div>
     </div>
