Added default logins

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -6,7 +6,7 @@
         <form action="/login" method="post" class="needs-validation" novalidate>
             <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-            <input name="username" type="text" class="form-control" id="username" required />
+            <input name="username" type="text" class="form-control" id="username" value="demo2" required />
         </div>
 
       
@@ -14,7 +14,7 @@
 
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input name="password" type="password" class="form-control" id="password" required />
+            <input name="password" type="password" class="form-control" id="password" value="demo2" required />
             
         </div>
 
